k8s-yaml/my_own_from_sratch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-test
  labels:
    tier: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-nginx # muss das template-metadata-label matchen
  template:
    metadata:
      labels:
        app: app-nginx # gematcht vom spec-selector
    spec:
      containers:
      - name: my-nginx
        image: nginx
        ports: 
        - containerPort: 80
